added opinion section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
-        <header class="container-fluid position-fixed">
+        <header class="container-fluid container-lg col-lg-11  fixed-top">
             <div class="row d-flex align-items-center header-fr">
                 <a href="#" class="col-auto order-lg-2 offset-lg-2 pt-lg-4 pb-lg-4">
                     <svg class="news-logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.6 60" style="enable-background:new 0 0 395.6 60;" xml:space="preserve"><g>
@@ -174,10 +174,10 @@
                 </ul>
             </div>
         </div>
-        <main class="container-fluid bg-light">
+        <main class="container-fluid container-lg col-lg-11 bg-light">
             <div class="row align-items-baseline">
                 <div class="col-12 col-md-7 order-md-2 p-0">
-                    <section class="p-3 border bg-white">
+                    <section class="p-3 bg-white">
                     <h3 class="text-secondary section-title">Top Story</h3>
                     <div class="w-100 position position-relative">
                         <img class="w-100" src="https://d.newsweek.com/en/full/1576593/china-united-states-flag-beijing.webp?w=591&h=364&f=c951543fd525705c8cdd166d42fa1102" alt="flag">
@@ -192,9 +192,23 @@
                         While the United States and the Soviet Union banded together in World War II, experts say the U.S. and China's economic superpower rivalry runs too deep for them to cooperate against the new coronavirus.
                     </p>
                     </section>
+                    <section class="p-3 border-bottom d-flex bg-white">
+                        <div class="w-75 position position-relative top-stories-bottom-img">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1577428/andrew-cuomo.webp?w=95&h=95&f=03f5ab07feb354f75f55a33e6179c39a" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block" href="#">
+                                New York Coronavirus Update: Cuomo Extends Stay-At-Home Order by 2 Weeks
+                            </a>
+                            <p class="section-summary pt-2 pl-3 text-justify">
+                                The governor announced an extension for New York State's "PAUSE" policy, now in effect for at least two more weeks.
+                            </p>
+                        </div>
+                        </section>
+                    
                 </div>
                 <div class="col-12 col-md-5 order-md-1 p-0">
-                    <section class="p-3 border bg-white">
+                    <section class="p-3 bg-white">
                         <h3 class="text-secondary section-title">featured stories</h3>
                         <div class="w-100 position position-relative">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1577094/donald-trump-poll-approval-rating-coronavirus.webp?w=767&h=512&q=90&f=382101b0f97977ec229408ad5afcb092" alt="trump">
@@ -209,7 +223,65 @@
                             The new poll also said it is the first time disapproval of President Donald Trump's performance has been lower than approval.
                         </p>
                     </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1577433/coronavirus-china.webp?w=767&h=512&l=0&t=0&q=90&f=94c8b08eb3e0e50aa719a4b79ad7c903" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                NEWS
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Wuhan COVID-19 Deaths May Be in Tens of Thousands, Data on Cremations Show
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            Shipments of urns further raised questions about the accuracy of China's official Wuhan COVID-19 death toll.
+                        </p>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1576708/coronavirus-getty-covid19-testing-test.webp?w=767&h=512&q=90&f=bc7fb5b6436333d59a64045dedddb9ba" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                HEALTH
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Germany To Introduce Covid-19 'Immunity Certificates' For Recovered Public
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            The documents are part of a research project being conducted at the Helmholtz Centre for Infection Research in Braunschweig, which will conduct blood tests in the general public for antibodies produced against the virus.
+                        </p>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1577399/culture-hollywood-01.webp?w=767&h=512&l=57&t=43&q=90&f=d39ab14da79bf7a02f6b22128efbef6e" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                CULTURE
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Hollywood Takes An Economic Beating from COVID-19
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            No one knows just how bad it ultimately will be, but coronavirus' financial damage to showbiz has already been severe
+                        </p>
+                    </section>
+
                 </div>
+                <div class="col-12 bg-white">
+                    <h3 class="text-secondary section-title">opinion</h3>
+                    <section class="d-flex">
+                        <img src="https://d.newsweek.com/en/full/1568478/bonnie-kristian.webp?w=63&h=63&f=ca92d03f69e06f6dd117bf04cef90475" alt="image">
+                        <div>
+                        <a href="#" class="opinion-header font-weight-bold pl-3 d-block">
+                            Lashing Out at China Over Coronavirus Does Nothing for U.S. Interests
+                        </a>
+                        <p class="section-summary pt-2 pl-3 text-justify font-weight-bold">
+                            BY BONNIE KRISTIAN
+                        </p>
+                        </div>
+                    </section>
+                </div>
+
             </div>
         </main>
 
