--- a/index.html
+++ b/index.html
@@ -269,14 +269,47 @@
                 </div>
                 <div class="col-12 bg-white">
                     <h3 class="text-secondary section-title">opinion</h3>
-                    <section class="d-flex">
-                        <img src="https://d.newsweek.com/en/full/1568478/bonnie-kristian.webp?w=63&h=63&f=ca92d03f69e06f6dd117bf04cef90475" alt="image">
+                    <section class="d-flex border-bottom pb-2 pt-2">
+                        <img class="rounded-circle opinion-img" src="https://d.newsweek.com/en/full/1568478/bonnie-kristian.webp?w=63&h=63&f=ca92d03f69e06f6dd117bf04cef90475" alt="image">
+                        <div class="">
+                            <a href="#" class="opinion-header font-weight-bold pl-3 d-block">
+                                Lashing Out at China Over Coronavirus Does Nothing for U.S. Interests
+                            </a>
+                            <p class="section-summary pt-2 pl-3 text-justify font-weight-bold">
+                                BY BONNIE KRISTIAN
+                            </p>
+                        </div>
+                    </section>
+                    <section class="d-flex border-bottom pb-2 pt-2">
+                        <img class="rounded-circle opinion-img" src="https://d.newsweek.com/en/full/1561683/doug-gordon.webp?w=63&h=63&f=2ee0e0bead2b09866ef97374e69a1501" alt="image">
                         <div>
                         <a href="#" class="opinion-header font-weight-bold pl-3 d-block">
-                            Lashing Out at China Over Coronavirus Does Nothing for U.S. Interests
+                            Our Right to Vote in November Is in Real Danger—But It Can Still Be Saved
                         </a>
                         <p class="section-summary pt-2 pl-3 text-justify font-weight-bold">
-                            BY BONNIE KRISTIAN
+                            BY DOUG GORDON
+                        </p>
+                        </div>
+                    </section>
+                    <section class="d-flex border-bottom pb-2 pt-2">
+                        <img class="rounded-circle opinion-img" src="https://d.newsweek.com/en/full/1577421/hank-gilman.webp?w=63&h=63&f=f18b9a7364da071493072861d8b4448f" alt="image">
+                        <div>
+                        <a href="#" class="opinion-header font-weight-bold pl-3 d-block">
+                            Boeing, Bernie, Stock Market Porn...and Neil Young!
+                        </a>
+                        <p class="section-summary pt-2 pl-3 text-justify font-weight-bold">
+                            BY HANK GILMAN
+                        </p>
+                        </div>
+                    </section>
+                    <section class="d-flex pt-2">
+                        <img class="rounded-circle opinion-img" src="https://d.newsweek.com/en/full/1577573/danya-ruttenberg.webp?w=63&h=63&f=bc22739040ad2eccd1323816369d37e8" alt="image">
+                        <div>
+                        <a href="#" class="opinion-header font-weight-bold pl-3 d-block">
+                            COVID-19 Offers a Reminder: Now is the Prudent Time to Settle Your Affairs
+                        </a>
+                        <p class="section-summary pt-2 pl-3 text-justify font-weight-bold">
+                            BY DANYA RUTTENBERG
                         </p>
                         </div>
                     </section>
