--- a/index.html
+++ b/index.html
@@ -314,6 +314,42 @@
                         </div>
                     </section>
                 </div>
+                <div class="col-12 bg-white d-flex flex-column justify-content-center">
+                    <h3 class="text-secondary section-title">the debate</h3>
+                    <section class="debate-section pb-2 position-relative">
+                        <div class="d-flex border-bottom mb-1 pb-3 align-items-center">
+                            <img class="debate-img" src="https://d.newsweek.com/en/full/1575781/joe-biden.webp?w=466&h=466&f=d644274f3b1bafaee9137356cd42b688" alt="image">
+                            <h2 class="debate-text pl-3">
+                                <a href="#" class="text-black debate-text">Biden's Running Mate Needs to Win Him an Entire State, Not Just a Constituency
+                                </a>
+                            </h2>
+                        </div>
+                        <p class="text-dark border-top pb-3"> BY <b>PETER ROFF</b></p>
+                        <a href="#">
+                            <img class="position-absolute rounded-circle debate-absolute-img" src="https://d.newsweek.com/en/full/1528785/roff-new.webp?w=150&h=150&f=0992b2cf5c54139a019181659687bf9a" alt="image">
+                        </a>
+                    </section>
+                    <div class="debate-divider rounded-circle d-flex align-items-center justify-content-center text-light ml-auto mr-auto">
+                        VS
+                    </div>
+                    <section class="debate-section pb-2 position-relative mt-4">
+                        <div class="d-flex border-bottom mb-1 pb-3 align-items-center">
+                            <img class="debate-img" src="https://d.newsweek.com/en/full/1573022/joe-biden-bernie-sanders.webp?w=466&h=466&f=18b03c77d9fb0197b3b404809e859f1e" alt="image">
+                            <h2 class="debate-text pl-3">
+                                <a href="#" class="text-black debate-text">
+                                    A Woman of Color VP Is More Than a Consolation Prize. It's a Necessity
+                                </a>
+                            </h2>
+                        </div>
+                        <p class="text-dark border-top pb-3">
+                            BY <b>AIMEE ALLISON</b>
+                        </p>
+                        <a href="#">
+                            <img class="position-absolute rounded-circle debate-absolute-img" src="https://d.newsweek.com/en/full/1565352/aimee-allison.webp?w=150&h=150&f=ae41d00ed12c8a0c6447a34ea3da29d0" alt="image">
+                        </a>
+                    </section>
+                </div>
+                
 
             </div>
         </main>
