added sponsored section

--- a/index.html
+++ b/index.html
@@ -349,6 +349,40 @@
                         </a>
                     </section>
                 </div>
+                <div clas="col-12 bg-white">
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1575945/cybersecurity-vantage-hp-sponsor.jpg?w=500&h=333&f=ac517642217c0d9cec695be60008ce2a" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
+                                SPONSORED INSIGHT
+                            </span>
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                Weathering the Perfect Storm
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                COVID-19 is not our only enemy. While the world confronts a pandemic, our critical infrastructure is vulnerable to cyberattack. Read this new report on where the weak points are and how to strengthen defenses against terrorists and cyber-criminals.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1567276/synergy-executive.png?w=500&h=333&f=e6fd82b7f70041bcbbe5be256d74024f" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
+                                SPONSORED INSIGHT
+                            </span>
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                Who Leads the Field in Dependency Treatment in 2020?
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                When seeking guidance on beating an addiction, there are many things to consider. Where do you go to ensure that you will not just turn the corner, but keep carrying on down the right road for the rest of your life? Find out more.
+                            </p>
+                        </div>
+                    </section>
+                </div>
                 
 
             </div>
